[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sshq"
version = "0.1.0"
description = "AI-assisted SSH wrapper"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "google-genai"
]
authors = [
    { name = "Pablo Ridolfi", email = "pabloridolfi@gmail.com" }
]
urls = { Repository = "https://github.com/pridolfi/sshq" }

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.8.0"]

[project.scripts]
sshq = "sshq.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]
